--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,9 @@ dependencies:
   shared_preferences: ^2.5.2
   # flutter_dotenv: ^5.2.1
   package_info_plus: ^8.3.0
+  easy_sidemenu: ^0.7.1
+  fl_chart: ^0.63.0
+
 
 dev_dependencies:
   flutter_test:
@@ -67,6 +70,10 @@ dev_dependencies:
   flutter_lints: ^5.0.0
   printing: ^5.14.2
   pdf: ^3.11.3
+  data_table_2: ^2.5.18
+  postgres: ^3.5.4
+  localstorage: ^6.0.0
+  
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -82,8 +89,8 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+    - assets/login_images/
+    - assets/sales_images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
