sowmiya 17/01/2026 running list
sowmiya 17/01/2026 running list

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -91,6 +91,8 @@ flutter:
     - assets/
     - assets/login_images/
     - assets/sales_images/
+    - assets/sales_images/images/
+    
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
